--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "mosaic-light-react",
   "version": "0.1.0",
+  "main": "dist/main.js",
   "scripts": {
+    "start": "react-scripts start",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron-dev": "electron ."
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "chart.js": "^3.5.0",
     "chartjs-adapter-moment": "^1.0.0",
+    "electron": "^17.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
     "react-router-dom": "^6.2.1",
