--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
+    "axios": "^0.26.1",
     "chart.js": "^3.5.0",
     "chartjs-adapter-moment": "^1.0.0",
     "electron": "^17.1.2",
@@ -21,8 +22,13 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
-    "react-transition-group": "^4.4.1"
+    "react-scripts": "^5.0.0",
+    "react-transition-group": "^4.4.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
