--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
